# tripp528.github.io

./: CNAME  README.md  compile.py  index.html  package.json  pyproject.toml
bolderIndustries/: index.php
bolderIndustries/php/: footer.php  header.php
bolderIndustries/php/form2/: structure.php
bolderIndustries/sass/: styles.scss
bolderIndustries/sass/base/: __base-dir.scss  _materializeTemplate.scss  _typography.scss
bolderIndustries/sass/layouts/: __layouts-dir.scss  _header.scss
css/: materialize.css  styles.css
php/: content.php  home.php  modals.php  template.php
php/form2/: handler2.php
php/phpform/: formpage.php  handler.php
public/: index.html
sass/abstracts/: _variables.scss
sass/components/: __components-dir.scss  _form.scss
sass/layouts/: _footer.scss
scripts/: compile
src/: app.js  index.js  linktree.js
src/posts/: why.js
