[tool.poetry]
name = "customer-portal"
version = "0.1.0"
description = ""
authors = ["tripp528 <33329853+tripp528@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
jsmin = "^3.0.0"
csscompressor = "^0.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
